# code-review-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0605815facbc_inital_tables.py  2c1895a4560d_add_agent_type_column.py  3a14da9d5b15_initial_tables.py
app/: celery_app.py  main.py  tasks.py
app/handlers/: exceptions.py  logger.py  prefix.py
app/models/: __init__.py  models.py
app/routers/: __init__.py  migration_router.py  pr_analysis_router.py
app/schemas/: pr_analysis_examples.py  pr_analysis_schemas.py
app/services/: alembic_service.py  code_analyzer.py  github_service.py  openai_service.py  pr_analysis_bg_task.py
app/services/code_review_agent/: __init__.py  common.py  multi_agent.py  multi_agent_prompts.py  zero_shot_agent.py  zero_shot_llm.py  zero_shot_prompts.py
tests/: test_code_agents.py  test_pr_analysis_flow.py
