[project]
name = "code-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]~=0.115.14",
    "githubkit>=0.12.15",
    "openai>=1.93.0",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = ["ruff>=0.12.2"]
