[project]
name = "code-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]~=0.115.14",
    "githubkit>=0.12.15",
    "openai>=1.93.0",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.2",
    "sqlalchemy>=2.0.41",
]
